[gd_scene load_steps=7 format=3 uid="uid://b743f64ynbsbw"]

[ext_resource type="Script" path="res://scripts/xr/MapArea.gd" id="1_q5k0h"]
[ext_resource type="ArrayMesh" uid="uid://cyrjx5172pq1k" path="res://assets/models/walls/side.res" id="2_6rrn2"]
[ext_resource type="Material" uid="uid://curm8wuvawnwh" path="res://resources/materials/wall.tres" id="2_nv36f"]
[ext_resource type="ArrayMesh" uid="uid://dw8pxnelir58j" path="res://assets/models/walls/inner_corner1.res" id="3_nn7iu"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_6rhar"]
albedo_color = Color(0.427, 0.4697, 0.61, 1)

[sub_resource type="PlaneMesh" id="PlaneMesh_kvb3u"]
size = Vector2(1, 1)

[node name="MapArea" type="Node3D"]
script = ExtResource("1_q5k0h")

[node name="ScaledStatic" type="Node3D" parent="."]

[node name="Ground" type="MeshInstance3D" parent="ScaledStatic"]
material_override = SubResource("StandardMaterial3D_6rhar")
mesh = SubResource("PlaneMesh_kvb3u")
skeleton = NodePath("../..")

[node name="Ceil" type="MeshInstance3D" parent="ScaledStatic"]
transform = Transform3D(1, -3.20993e-13, -1.22392e-06, 0, -1, 2.62269e-07, -1.22392e-06, -2.62269e-07, -1, 0, 2.3, 0)
material_override = ExtResource("2_nv36f")
mesh = SubResource("PlaneMesh_kvb3u")
skeleton = NodePath("../..")

[node name="WallPZ" type="MeshInstance3D" parent="ScaledStatic"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 0, 0)
material_override = ExtResource("2_nv36f")
mesh = ExtResource("2_6rrn2")
skeleton = NodePath("../..")

[node name="WallZP" type="MeshInstance3D" parent="ScaledStatic"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0, -0.5)
material_override = ExtResource("2_nv36f")
mesh = ExtResource("2_6rrn2")
skeleton = NodePath("../..")

[node name="WallNZ" type="MeshInstance3D" parent="ScaledStatic"]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -0.5, 0, 0)
material_override = ExtResource("2_nv36f")
mesh = ExtResource("2_6rrn2")
skeleton = NodePath("../..")

[node name="WallZN" type="MeshInstance3D" parent="ScaledStatic"]
transform = Transform3D(1.19249e-08, 0, -1, 0, 1, 0, 1, 0, 1.19249e-08, 0, 0, 0.5)
material_override = ExtResource("2_nv36f")
mesh = ExtResource("2_6rrn2")
skeleton = NodePath("../..")

[node name="CornerPP" type="MeshInstance3D" parent="ScaledStatic"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 0, -0.5)
material_override = ExtResource("2_nv36f")
mesh = ExtResource("3_nn7iu")
skeleton = NodePath("../..")

[node name="CornerNP" type="MeshInstance3D" parent="ScaledStatic"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -0.5, 0, -0.5)
material_override = ExtResource("2_nv36f")
mesh = ExtResource("3_nn7iu")
skeleton = NodePath("../..")

[node name="CornerNN" type="MeshInstance3D" parent="ScaledStatic"]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -0.5, 0, 0.5)
material_override = ExtResource("2_nv36f")
mesh = ExtResource("3_nn7iu")
skeleton = NodePath("../..")

[node name="CornerPN" type="MeshInstance3D" parent="ScaledStatic"]
transform = Transform3D(1.19249e-08, 0, -1, 0, 1, 0, 1, 0, 1.19249e-08, 0.5, 0, 0.5)
material_override = ExtResource("2_nv36f")
mesh = ExtResource("3_nn7iu")
skeleton = NodePath("../..")
